# audio_classifier

./: Cargo.toml  README.md
assets/: audio
src/: buf_reader.rs  lib.rs  main.rs
