[package]
name = "audio_classifier"
version = "0.1.0"
edition = "2021"

# Remove any `path` key under [package] if it exists

[dependencies]
glob = "0.3.1"
hound = "3.5.0"        # Add any other dependencies you're using
pyo3 = "0.22.1"
serde = "1.0.204"
serde_json = "1.0.120"
wavers = "1.4.3"

[lib]
name = "audio_classifier"
path = "src/lib.rs"

[[bin]]
name = "audio_classifier"
path = "src/main.rs"
