[package]
name = "audio_classifier"
version = "0.1.0"
edition = "2021"

# Remove any `path` key under [package] if it exists

[dependencies]
pyo3 = "0.21.2"
serde = "1.0.204"
serde_json = "1.0.120"
wavers = { version = "1.4.3", features = ["colored", "ndarray", "pyo3"] }
hound = "3.5.0"

[lib]
name = "audio_classifier"
path = "src/lib.rs"

[[bin]]
name = "audio_classifier"
path = "src/main.rs"
glob = "0.3.1"
